dockerizes API
