# package/src/swagger_server/swagger/swagger.yaml
@@ -431,6 +431,8 @@ definitions:
                     type: "string"
                   id:
                     type: "string"
+                  university_id:
+                    type: "string"
       metadata:
         type: "object"
         properties:
@@ -465,6 +467,8 @@ definitions:
                   description:
                     type: "string"
                   id:
+                    type: "string"
+                  university_id:
                     type: "string"
       metadata:
         type: "object"
@@ -575,19 +579,24 @@ definitions:
     xml:
       name: "CourseUpdateDistinction"
   CourseUpdateComponents:
-    type: "array"
-    items:
-      type: "object"
-      properties:
-        type:
-          type: "string"
-        weighting:
-          type: "number"
-          format: "float"
-          minimum: 0
-          maximum: 1
-        required:
-          type: "boolean"
+    type: "object"
+    properties:
+      course_id:
+        type: "string"
+      components:
+        type: "array"
+        items:
+          type: "object"
+          properties:
+            type:
+              type: "string"
+            weighting:
+              type: "number"
+              format: "float"
+              minimum: 0
+              maximum: 1
+            required:
+              type: "boolean"
     xml:
       name: "CourseUpdateComponents"
   CoursePrerequisite:
